fix: remove overlap

--- a/sass/inhalt/ansprache/_motto.sass
+++ b/sass/inhalt/ansprache/_motto.sass
@@ -209,7 +209,7 @@
 		margin: 0
 		> picture
 			position: relative
-			margin-top: -14vw
+			// margin-top: -14vw
 			img
 				max-width: 100%
 			&::before
@@ -219,7 +219,7 @@
 				width: 100%
 				background: radial-gradient(closest-side at 50% 58%, rgba(255, 255, 255, 0) 50%, white 80%)
 		figcaption
-			margin-top: -4vw
+			// margin-top: -4vw
 			position: relative
 			z-index: 3
 			font-size: 120%
